err/zope.documenttemplate.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/zope'...
Listing './lib/python3.5/site-packages/zope/documenttemplate'...
Compiling './lib/python3.5/site-packages/zope/documenttemplate/dt_let.py'...
***   File "./lib/python3.5/site-packages/zope/documenttemplate/dt_let.py", line 64
    except SyntaxError, v:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/zope/documenttemplate/dt_string.py'...
***   File "./lib/python3.5/site-packages/zope/documenttemplate/dt_string.py", line 99
    exec 'from %s import %s' % (module, name) in d
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/zope/documenttemplate/dt_util.py'...
***   File "./lib/python3.5/site-packages/zope/documenttemplate/dt_util.py", line 107
    except SyntaxError, v:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/zope/documenttemplate/dt_var.py'...
***   File "./lib/python3.5/site-packages/zope/documenttemplate/dt_var.py", line 264
    raise 'Document Error',(
                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/zope/documenttemplate/pdocumenttemplate.py'...
***   File "./lib/python3.5/site-packages/zope/documenttemplate/pdocumenttemplate.py", line 299
    except KeyError, v:
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/zope/documenttemplate/tests'...
Compiling './lib/python3.5/site-packages/zope/documenttemplate/tests/dtmltestbase.py'...
***   File "./lib/python3.5/site-packages/zope/documenttemplate/tests/dtmltestbase.py", line 39
    return "D(%s)" % `self.__dict__`
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/zope/documenttemplate/tests/testustr.py'...
***   File "./lib/python3.5/site-packages/zope/documenttemplate/tests/testustr.py", line 43
    assert a=='hello', `a`
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/zope/documenttemplate/untrusted'...
Listing './lib/python3.5/site-packages/zope/structuredtext'...
Listing './lib/python3.5/site-packages/zope/structuredtext/regressions'...
Listing './lib/python3.5/site-packages/zope.documenttemplate-3.4.3.egg-info'...
Listing './lib/python3.5/site-packages/zope.structuredtext-4.2.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
